Try to fix invisible link

--- a/static/base.css
+++ b/static/base.css
@@ -219,9 +219,6 @@ h3 {
   text-align: center;
 }
 
-strong a {
-  color: black;
-}
 
 * {
   box-sizing: border-box;
